--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dBa-ZC-Clc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ij2-Za-dBx">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1122" y="-449"/>
+            <point key="canvasLocation" x="2337" y="-425"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="A8f-S3-jsq">
@@ -35,12 +35,73 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="sFu-NR-LcY"/>
+                        <segue destination="alt-9q-Gf8" kind="relationship" relationship="rootViewController" id="6eM-RK-cm6"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x1s-pV-OuS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="274.5" y="-449"/>
+            <point key="canvasLocation" x="589.5" y="-469"/>
+        </scene>
+        <!--Menu View Controller-->
+        <scene sceneID="ngl-9Q-FzK">
+            <objects>
+                <viewController storyboardIdentifier="CHMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6SY-CU-gIa" customClass="CHMenuViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GKI-dL-bIF"/>
+                        <viewControllerLayoutGuide type="bottom" id="dm5-fB-WHx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7Rl-fw-hYH">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UeP-CS-nkO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="589.5" y="260"/>
+        </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="H5W-fS-QLG">
+            <objects>
+                <viewController storyboardIdentifier="CHRevealViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ij2-Za-dBx" customClass="CHRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gh3-d8-fpL"/>
+                        <viewControllerLayoutGuide type="bottom" id="HIU-GI-nwN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="a16-GG-1NR">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="dBa-ZC-Clc" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="QwK-ht-5Af"/>
+                        <segue destination="6SY-CU-gIa" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="HzL-ml-YhZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q7E-9Q-6zg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-409.5" y="-192"/>
+        </scene>
+        <!--Main View Controller-->
+        <scene sceneID="TXi-au-XW2">
+            <objects>
+                <viewController storyboardIdentifier="CHMainViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="alt-9q-Gf8" customClass="CHMainViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KJH-do-f2y"/>
+                        <viewControllerLayoutGuide type="bottom" id="SLb-qu-WH4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gR8-vx-rcw">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="NCo-5v-Clv">
+                        <barButtonItem key="leftBarButtonItem" title="Item" id="og5-Ae-hjF"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="revealButtonItem" destination="og5-Ae-hjF" id="t4A-3g-dpp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dxn-JO-h9L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1324.5" y="-469"/>
         </scene>
     </scenes>
 </document>
