--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="30E-U0-ato">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="IdentifierMenu" id="30E-U0-ato">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="30E-U0-ato" id="Atg-Hc-eNU">
@@ -65,12 +65,18 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6SY-CU-gIa" id="Zcc-Kr-xSU"/>
+                                    <outlet property="delegate" destination="6SY-CU-gIa" id="l7X-2G-i1Z"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="wQL-mQ-taH" firstAttribute="top" secondItem="7Rl-fw-hYH" secondAttribute="top" id="AVn-A2-IaB"/>
-                            <constraint firstAttribute="trailing" secondItem="wQL-mQ-taH" secondAttribute="trailing" id="JQr-zk-uwX"/>
+                            <constraint firstAttribute="trailing" secondItem="wQL-mQ-taH" secondAttribute="trailing" id="JQr-zk-uwX">
+                                <variation key="widthClass=compact" constant="60"/>
+                            </constraint>
                             <constraint firstItem="dm5-fB-WHx" firstAttribute="top" secondItem="wQL-mQ-taH" secondAttribute="bottom" id="Qhz-v5-p66"/>
                             <constraint firstItem="wQL-mQ-taH" firstAttribute="leading" secondItem="7Rl-fw-hYH" secondAttribute="leading" id="s8x-eU-T0K"/>
                         </constraints>
